# text_http_client

./: Cargo.toml  README.md
src/: http_client.rs  logger.rs  main.rs  request_error.rs  request_message.rs  response_message.rs
