[package]
name = "thc"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
clap = { version = "4.4.14", features = ["derive"] }
serde = { version = "1.0.195", features = ["derive"] }
surf = "2.3.2"
toml = "0.8.8"
